Updated contact form and fixed image on mobile issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4049,14 +4049,6 @@ input, select, textarea {
   display: none;
 }
 
-.success-message {
-      display: none;
-      color: #2ecc71;
-      font-weight: bold;
-      margin-left: 10px;
-      margin-top: 10px;
-    }
-
 .cool-button {
   display: inline-block;
   padding: 2px 4px;
